[package]
name = "server"
version = "0.1.0"
authors = ["Patrick Sullivan <patrick.sullivan@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
simulation = { path = "../simulation" }
specs = { version = "0.16.1", features = ["specs-derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.14.0"
tungstenite = "0.13"